--- a/Pages/MediaPlayPage.xaml
+++ b/Pages/MediaPlayPage.xaml
@@ -45,6 +45,18 @@
                         <ToggleMenuFlyoutItem x:Name="MediaDetailedStatsToggleMenuItem" x:Uid="App/Menu/MediaPlayer/ShowDetailedStats" Visibility="{x:Bind CfgModel.App_IsDeveloper,Mode=OneWay}"/>
                     </MenuFlyout>
                 </MediaPlayerElement.ContextFlyout>
+                <MediaPlayerElement.TransportControls>
+                    <MediaTransportControls IsPlaybackRateButtonVisible="False" IsPlaybackRateEnabled="True">
+                        <!--
+                        <MediaTransportControls.ContextFlyout>
+                            <MenuFlyout>
+                                <ToggleMenuFlyoutItem x:Uid="App/Menu/MediaPlayer/UseSystemControls" IsChecked="{x:Bind MediaPlayerElem.AreTransportControlsEnabled,Mode=TwoWay}"/>
+                                <ToggleMenuFlyoutItem x:Name="MediaDetailedStatsToggleMenuItem" x:Uid="App/Menu/MediaPlayer/ShowDetailedStats" Visibility="{x:Bind CfgModel.App_IsDeveloper,Mode=OneWay}"/>
+                            </MenuFlyout>
+                        </MediaTransportControls.ContextFlyout>
+                        -->
+                    </MediaTransportControls>
+                </MediaPlayerElement.TransportControls>
             </MediaPlayerElement>
             <local:SimpleStateIndicator x:Name="MediaPlayerStateOverlay"/>
             <Grid x:Name="MediaDetailedStatsOverlay" ColumnSpacing="10" RowSpacing="2" Background="#99000000" Margin="10,10,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" CornerRadius="4" Padding="8,6" Visibility="Collapsed">
@@ -67,8 +79,8 @@
                     <ScrollViewer IsScrollInertiaEnabled="True"
                       VerticalScrollBarVisibility="Auto">
                         <StackPanel Orientation="Vertical" Spacing="5" Padding="10,8,10,8">
-                            <Image Source="{x:Bind MediaCoverImageUrl}"/>
-                            <TextBlock Text="{x:Bind MediaTitle}" FontSize="19" TextWrapping="WrapWholeWords" IsTextSelectionEnabled="True"/>
+                            <Image Source="{x:Bind MediaCoverImageUrl}" CanDrag="True"/>
+                            <TextBlock Text="{x:Bind MediaTitle}" FontSize="19" TextWrapping="Wrap" IsTextSelectionEnabled="True"/>
                             <ListView x:Name="UpListView" ItemsSource="{x:Bind UpList}" ItemClick="UpListView_ItemClick" SelectionMode="None" IsItemClickEnabled="True" ScrollViewer.VerticalScrollMode="Disabled">
                                 <ListView.ItemContainerTransitions>
                                     <TransitionCollection/>
@@ -91,7 +103,7 @@
                                     </DataTemplate>
                                 </ListView.ItemTemplate>
                             </ListView>
-                            <TextBlock Text="{x:Bind MediaDescription}" Foreground="{ThemeResource SystemControlForegroundBaseMediumBrush}" TextWrapping="WrapWholeWords" IsTextSelectionEnabled="True"/>
+                            <TextBlock Text="{x:Bind MediaDescription}" Foreground="{ThemeResource SystemControlForegroundBaseMediumBrush}" TextWrapping="Wrap" IsTextSelectionEnabled="True"/>
                             <StackPanel Visibility="{x:Bind ShouldShowPartsList}" Spacing="5">
                                 <TextBlock x:Uid="App/Page/MediaPlayPage/Sidebar/Parts"/>
                                 <ListView x:Name="PartsListView" ItemsSource="{x:Bind PartsList}" SelectionChanged="PartsListView_SelectionChanged" SelectionMode="Single" ScrollViewer.VerticalScrollMode="Disabled" IsRightTapEnabled="True" RightTapped="PartsListView_RightTapped">
