--- a/Pages/FavouritesUserPage.xaml
+++ b/Pages/FavouritesUserPage.xaml
@@ -69,11 +69,18 @@
                                 <ColumnDefinition Width="Auto"/>
                                 <ColumnDefinition Width="*"/>
                             </Grid.ColumnDefinitions>
+                            <!--
                             <Image Grid.Column="0" Margin="0,0,10,0" Width="128">
                                 <Image.Source>
                                     <BitmapImage UriSource="{x:Bind CoverUrl}" AutoPlay="False"/>
                                 </Image.Source>
                             </Image>
+                            -->
+                            <local:ImageEx2 Grid.Column="0" Margin="0,0,10,0" Width="128">
+                                <local:ImageEx2.Source>
+                                    <local:ImageEx2Source UriSource="{x:Bind CoverUrl}"/>
+                                </local:ImageEx2.Source>
+                            </local:ImageEx2>
                             <Grid Grid.Column="1">
                                 <Grid.RowDefinitions>
                                     <RowDefinition Height="*"/>
